# ros_coverage_example

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
include/ros_coverage_example/: my_code.hpp  my_code_ros.hpp
src/: my_code.cpp  my_code_ros.cpp
src/ros_coverage_example/: my_code.py  my_code_ros.py
test/: test_my_code.cpp  test_my_code.py  test_my_code_ros.cpp  test_my_code_ros.py
test/launch/: test_my_code.launch  test_my_code_cpp.launch  test_my_code_cpp_ros.launch  test_my_code_ros.launch
