<?xml version="1.0"?>
<package format="2">
  <name>ros_coverage_example</name>
  <version>0.0.0</version>
  <description>Example of how to add code coverage to ros tests</description>
  <maintainer email="michal@robots.ox.ac.uk">michal</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

</package>
